src/App.css
.App {
  text-align: left;
}

.card {
  border: 2px solid darkblue;
  border-radius: 16px;
  box-shadow: 10px 10px 5px lightblue;
  margin: 20px;
  padding: 10px;
  display: flex;
  background-color: lightcyan;
}

h1 {
  color: darkblue;
}

h2 {
  color: darkblue;
}

p {
  margin-left: 10px;
  color: midnightblue;
  line-height: 1.75rem;
}

.insideCard {
  margin: 10px;
}

.words {
  flex-basis: 80%;
}

.play {
  flex-basis: 10%;
  margin: auto;
  font-size: 50px;
  color: #58728b;
}

.pause {
  flex-basis: 10%;
  margin: auto;
  font-size: 40px;
  color: midnightblue;
}

.actContainer {
  background-color: aliceblue;
  padding: 20px;
  margin: 5px;
  border-radius: 40px;
  border: 1px solid lightblue;
}

.scene {
  border: 2px solid darkgray;
  border-radius: 16px;
  box-shadow: 10px 10px 5px lightgray;
  margin: 20px;
  padding: 10px;
  display: flex;
  background-color: lightgray;
}

.wholeGroup {
  background-color: rgb(197, 227, 197);
  border: 2px solid green;
  box-shadow: 10px 10px 5px rgb(197, 227, 197);

}

.doubleParent {
  display: flex;
}

.double {
  flex-basis: 50%;
}

.accordion {
  display: flex;
  flex-direction: column;
  width: 90%;
  margin: auto;
}

.accordion-title {
  display: flex;
  justify-content: space-between;
}

.accordion-content {
  max-height: 10000px;
  transition: max-height 1s ease-in-out;
  overflow: hidden;
}

.accordion-content[aria-expanded="true"] {
  max-height: 0px;
  transition: max-height 1s cubic-bezier(0, 1, 0, 1);
}

.plus {
  font-size: 38px;
}

.plus[aria-expanded="true"] {
  display: none;
}

.minus {
  display: none;
}

.minus[aria-expanded="false"] {
  display: inline;
  font-size: 38px;

}

.fullact {
  margin-left: 25%;
  background-color: cornflowerblue;
}

